--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.14.4
+minecraft_version=1.19-pre1
+yarn_mappings=1.19-pre1+build.6
+loader_version=0.14.6
 # Mod Properties
-mod_version=1.18-1.1
+mod_version=1.19-1.1
 maven_group=de.fanta
 archives_base_name=stats
 
