--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19-pre1
-yarn_mappings=1.19-pre1+build.6
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 # Mod Properties
 mod_version=1.19-1.1
 maven_group=de.fanta
 archives_base_name=stats
 
-cloth_config_version=6.2.57
-modmenu_version=3.2.1
+cloth_config_version=7.0.65
+modmenu_version=4.0.0-beta.4
 
