--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.19.1
 yarn_mappings=1.19.1+build.1
 loader_version=0.14.8
 # Mod Properties
-mod_version=1.19.1-rc2-1.1
+mod_version=1.19.1-1.1
 maven_group=de.fanta
 archives_base_name=stats
 
