--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.12
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.17
 # Mod Properties
-mod_version=1.19.3-2.0-Beta
+mod_version=1.19.4-2.0-Beta
 maven_group=de.fanta
 archives_base_name=stats
 
-cloth_config_version=9.0.93
-modmenu_version=5.0.2
+cloth_config_version=10.0.96
+modmenu_version=6.1.0-rc.4
 
