--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.4
+loader_version=0.14.23
 # Mod Properties
-mod_version=1.19.4-2.0-Beta
+mod_version=1.20.2-2.1-Beta
 maven_group=de.fanta
 archives_base_name=stats
 
-cloth_config_version=10.0.96
-modmenu_version=6.1.0-rc.4
+cloth_config_version=12.0.109
+modmenu_version=8.0.0
 
